added film links to several films

--- a/src/extrapages/films/bag-check.njk
+++ b/src/extrapages/films/bag-check.njk
@@ -12,7 +12,7 @@ image: /img/films/bag-check.jpg
 </br>
 <div class="bigcontainer">
   <div class="full-width-post">
-    <img src="/img/films/bag-check.jpg" alt="bag check still" class="post-hero installation-hero">
+    <iframe width="80%" height="315" src="https://www.youtube.com/embed/xYigF-7vbPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </br>
     <p>"Bag Check comes from the desire to grow my skill as a storyteller. From acting to directing, there were many new 'fronts' myself and the team pushed ourselves into. Half-born of lived experience, I'm hoping the film gives some comedic relief in the topic of border crossing in Latin America, and showcases a little bit of what it means to live between two cultures."</p>
     </br>
