--- a/src/extrapages/films/coyote.njk
+++ b/src/extrapages/films/coyote.njk
@@ -15,6 +15,7 @@ image: /img/films/coyote.jpg
     <div style="position:relative;">
       <img src="/img/films/best-film.png" alt="best film" class="top-right-corner">
       <img src="/img/films/coyote.jpg" alt="coyote still" class="post-hero installation-hero">
+      <iframe width="80%" height="315" src="https://www.youtube.com/embed/CrMbsWevTAg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     </br>
     <p>"I've always been intrigued by the term "coyote" when used as slang to describe the human smugglers who lead immigrants through the Chihuahuan Desert. Actual coyotes are often seen as deceptive, unrelenting menaces and their human counterparts expand on those descriptions. "Coyotes" take advantage of people at their most vulnerable by taking money from those looking to come into the United States to lead them through the desert so that they may illegally cross into the US. Often those "coyotes" will take further advantage of or even leave those people for dead. This practice is fueled by politics."</p>
