--- a/src/extrapages/films/santa-fe-resident.njk
+++ b/src/extrapages/films/santa-fe-resident.njk
@@ -15,6 +15,7 @@ image: /img/films/santa-fe-resident.jpg
       <div style="position:relative;">
         <img src="/img/films/2nd-best-film.png" alt="2nd best film" class="top-right-corner">
         <img src="/img/films/santa-fe-resident.jpg" alt="santa fe still" class="post-hero installation-hero">
+        <iframe width="80%" height="315" src="https://www.youtube.com/embed/AQPdOD7r0Kc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </br>
     <p>"I participated in the inaugural "Neighborhood Historian" project, which is now called "Community Storytellers." It is a collaboration between The Santa Fe Public Library and the non-profit interdisciplinary community art organization called Little Globe. It was through this cohort that the making of Santa Fe Resident came about.  The focus of the film "Santa Fe Resident" was to have my mom, an oceanic refugee (a.k.a part of the "boat people") to tell her journey to America from Vietnam and how she came to be in Santa Fe."</p>
