updated front page with MOOD date

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/page.njk
 title: Fronteras Micro-film Festival
-description: June 2-4, 2023 -- Fusion, Albuquerque, New Mexico
-description2: June 16-18, 2023 -- Currents New Media, Santa Fe, New Mexico
-description3: TBD -- MOOD Studios, Albuquerque, New Mexico
+description: March 1, 2024 -- MOOD, Albuquerque, New Mexico
+description2: June 2-4, 2023 -- FUSION, Albuquerque, New Mexico
+description3: June 16-18, 2023 -- Currents New Media, Santa Fe, New Mexico
 navlogo: customs
 image: /img/bigbend.jpg
 filmsfront:
