--- a/src/extrapages/2023/films-2023.njk
+++ b/src/extrapages/2023/films-2023.njk
@@ -4,10 +4,12 @@ title: Film Selections
 description: Our 2023 film selections.
 navlogo: emojianim
 backgroundcolor: F5F5F5
-permalink: /films/
+permalink: /films-2023/
 eleventyNavigation:
-  key: Films
+  key: Films2023
+  parent: "2023"
   order: 4
+  title: Films
 films:
   - bag-check
   - border-wall-construction-2020
