--- a/src/extrapages/sponsors.njk
+++ b/src/extrapages/sponsors.njk
@@ -24,34 +24,10 @@ eleventyNavigation:
   </div>
   <div style="display:flex; align-items:center; justify-content:space-evenly;">
           <div style="padding: 1rem; max-width: 50%;">
-                  <a href="https://www.516arts.org/opportunities/fulcrum-fund" target="_blank"><img src="/img/fulcrum.png"></a>
-          </div>
-          <div style="padding: 1.5rem; max-width: 50%;">
-                  <a href="https://currentsnewmedia.org/" target="_blank"><img src="/img/currents.png"></a>
-          </div>
-  </div>
-  <div style="display:flex; align-items:center; justify-content:space-evenly;">
-          <div style="padding: 1rem; max-width: 50%;">
-                  <a href="https://www.fusionnm.org/" target="_blank"><img src="/img/fusion.png"></a>
-          </div>
-          <div style="padding: 1rem; max-width: 50%;">
                   <a href="https://www.cabq.gov/urban-enhancement-trust-fund/about-the-trust-fund" target="_blank"><img src="/img/uetf.png"></a>
           </div>
-  </div>
-  <div style="display:flex; align-items:center; justify-content:space-evenly;">
-          <div style="padding: 1rem; max-width: 50%;">
-                  <a href="https://abqfmi.com/" target="_blank"><img src="/img/afmi.png"></a>
-          </div>
-          <div style="padding: 1rem; max-width: 50%;">
-                  <a href="https://albuquerquerecycling.net" target="_blank"><img src="/img/abq-computer-electronics-recycling.png"></a>
-          </div>
-  </div>
-  <div style="display:flex; align-items:center; justify-content:space-evenly;">
-          <div style="padding: 2.5rem; max-width: 50%;">
-                  <a href="https://johnnyboards.com/" target="_blank"><img src="/img/johnnyboards.png"></a>
-          </div>
-          <div style="max-width: 50%;">
-                  <a href="https://www.cabq.gov/artsculture/" target="_blank"><img src="/img/cabq-public-arts.png"></a>
+          <div style="padding: 1.5rem; max-width: 50%;">
+                  <a href="https://paseoproject.org" target="_blank"><img src="/img/paseo.png"></a>
           </div>
   </div>
   <br />
