--- a/docs/css/components.scss
+++ b/docs/css/components.scss
@@ -10,7 +10,7 @@
   grid-template-columns: 1fr 1fr;
   width: 100%;
   margin: 0 auto;
-  overflow: hidden;
+  // overflow: hidden;
 }
 .navlogo {
   padding: 10px;
@@ -162,8 +162,9 @@
     transition: all 0.2s;
     position: absolute;
     display: inline-block;
-    right: 1px;
+    right: 0px;
     z-index: 9999;
+    min-width: 160px;
   }
   .navstuff.responsive .icon {
     position: absolute;
@@ -171,16 +172,16 @@
     top: 0;
     padding-right: 30px;
   }
-  .navstuff.responsive a {
-    float: none;
-    padding-left: 100px;
+  .navstuff.responsive a,
+  .navstuff.responsive .dropdown {
+    padding-left: 1.2em;
+    padding-right: 1.2em;
     padding-bottom: 10px;
-    padding-right: 20px;
     display: block;
     text-align: right;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
-    margin-right: -30px;
+    font-size: 1rem;
+    margin-right: 0;
+    float: none;
   }
 }
 
