--- a/src/extrapages/faq.njk
+++ b/src/extrapages/faq.njk
@@ -32,7 +32,7 @@ eleventyNavigation:
             <p>The first goal of the Fronteras Micro-Film Festival is to re-imagine the short film festival. We aim to give filmmakers and audiences an experience that emerges from, and supports, short film. To do so, we are creating (1) a unified context for the films with a strong theme, and (2) we are supporting a decentralized, viewer-driven, immersive viewing experience.</p>
             <p>The second goal is to provoke public conversation about borders. Dust Wave will solicit thirty second to three minute-long films, from local and international filmmakers, that address themes of borders, enforcement, and crossings. We will select twenty films for festival screening.</p>
             <p>Borders structure life for billions of people globally. Borders are also relevant to Dust Wave's members. We are a majority Latinx group, comprised of immigrants and non-immigrants who live near the U.S.-Mexico border. As such, we see around us the rising tide of nationalism and xenophobia. In shooting a recent project, a documentary on the <a href="https://www.darksky.org/our-work/conservation/idsp/reserves/" target="_blank">International Dark Sky Reserve</a> (IDSR) along the border, we were moved by the capaciousness of the natural world -- the boundless sky and desert. This ecosystem presents one vantage point that reveals national borders as recent, artificial, and intrusive artifacts.</p>
-            <p>Fronteras will feature a series of <a href="/installations/">interactive installations</a> that speak to the border's artificiality and dire consequences upon human life and the natural world. Some installations will invoke unwanted stops in a migrant's journey, including border walls, detention centers and trailer transport. Others will conjure state surveillance apparatuses of cameras and guard posts. Still others will engage the beauty and awe of the remaining untouched natural landscapes of the Mexico-U.S. border.</p>
+            <p>Fronteras features a series of <a href="/installations/">interactive installations</a> that speak to the border's artificiality and dire consequences upon human life and the natural world. Some installations invoke unwanted stops in a migrant's journey, including border walls, detention centers and trailer transport. Others conjure state surveillance apparatuses of cameras and guard posts. Still others engage the beauty and awe of the remaining untouched natural landscapes of the Mexico-U.S. border.</p>
           </div>
       </div>
     </div>
@@ -48,7 +48,7 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>The Festival submission period begins on March 1, 2023, at 4:00 PM Mountain Standard Time and ends on May 2, 2023, at 11:59 PM Mountain Standard Time.</p>
+            <p>The Festival submission period begins on June 19, 2025, at 4:00 PM Mountain Standard Time and ends on August 4, 2025, at 11:59 PM Mountain Standard Time.</p>
           </div>
       </div>
     </div>
@@ -80,7 +80,7 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>The submission fee is $11 USD.</p>
+            <p>The submission fee is $10 USD.</p>
             <p>In rare circumstances, the submission fee can be waived due to proven financial need. To request a fee waiver, please contact <a href="mailto:info@fronterasmicrofilm.com">info@fronterasmicrofilm.com</a> with the subject line "Fee Waiver" for more information.</p>
           </div>
       </div>
@@ -114,10 +114,9 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>There are 3 categories:</p>
+            <p>There are 2 categories:</p>
             <p><a href="/rules/#portrait">Portrait Films</a> must not exceed 60 seconds (1 minute) in length and must be submitted in 9:16 format.</p>
             <p><a href="/rules/#other">16:9 films</a> must not exceed 180 seconds (3 minutes) in length and must be submitted in 16:9 format.</p>
-            <p><a href="/rules/#other">4:3 films</a> must not exceed 90 seconds (1.5 minutes) in length, must be silent, must be black and white, and must be submitted in 4:3 format.</p>
           </div>
       </div>
     </div>
@@ -181,7 +180,7 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>The 20 finalists will be selected by a panel of qualified judges chosen by the Sponsor, based on creativity/originality, relevance to the stated themes of the Festival, and relevance to the installations.</p>
+            <p>The 10 finalists will be selected by a panel of qualified judges chosen by the Sponsor, based on creativity/originality, relevance to the stated themes of the Festival, and relevance to the installations.</p>
             <p>In the event of a tie, the entrant with a higher score in the "Creativity" category, as determined by the Festival Judges in their sole discretion, will be selected from among the tied entrants as the potential Finalist.</p>
           </div>
       </div>
@@ -198,7 +197,7 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>The Finalists will be notified on or about May 9, 2023, using the email address or phone number provided with the submission.</p>
+            <p>The Finalists will be notified on or about August 15, 2025, using the email address or phone number provided with the submission.</p>
             <p>Finalists will be required to respond within three (3) days of notification via email.</p>
             <p>Finalists are subject to verification.</p>
           </div>
@@ -216,13 +215,7 @@ eleventyNavigation:
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
-            <p>We will assign your film to one of the <a href="/installations">installations</a> in each of the 3 live events taking place in 2023:</p>
-            <ol class="ol1">
-              <li class="li5"><p><strong><a href="https://www.fusionnm.org/campus/" target="_blank">The Cell Theatre at Fusion</a> &mdash; </strong>June 2-4, 2023.</p><p><a href="https://www.google.com/maps/place/The+Cell+Theatre/@35.0898647,-106.6487334,17z/data=!4m10!1m2!2m1!1sfusion+forum!3m6!1s0x87220cba1dc0b4dd:0xa01731c8606f8ebd!8m2!3d35.0897507!4d-106.6465007!15sCgxmdXNpb24gZm9ydW1aDiIMZnVzaW9uIGZvcnVtkgEXcGVyZm9ybWluZ19hcnRzX3RoZWF0ZXKaASRDaGREU1VoTk1HOW5TMFZKUTBGblNVTm5helF6TW5SblJSQULgAQA!16s%2Fg%2F1th7yt6f" target="_blank">700-708 1st St. NW, Albuquerque, NM 87102, USA.</a></p></li>
-              <li class="li5"><p><strong><a href="https://currentsnewmedia.org/festivals/currents-new-media-2023/" target="_blank">Currents New Media 2023</a> &mdash; </strong>June 16-18, 2023.</p><p><a href="https://www.google.com/maps/place/SANTA+FE+COUNTY+FAIR+BUILDING/@35.6395733,-105.999311,17z/data=!3m1!4b1!4m6!3m5!1s0x87185a40742d1c67:0x63cc0148c40a287a!8m2!3d35.639569!4d-105.9948317!16s%2Fg%2F11mvh3ln96" target="_blank">3229 Rodeo Rd, Santa Fe, NM 87507, USA.</a></p></li>
-              <li class="li5"><p><strong><a href="https://allthingsmood.com/" target="_blank">MOOD</a> &mdash; </strong>TBD 2023</p><p><a href="https://www.google.com/maps/place/MOOD/@35.081776,-106.6140422,17z/data=!3m1!4b1!4m6!3m5!1s0x87220bb5a9f9a0af:0x6fadae02b188071a!8m2!3d35.0817716!4d-106.6118482!16s%2Fg%2F11q2pq419m" target="_blank">3001 Monte Vista Blvd NE, Albuquerque, NM 87106, USA.</a></p></li>
-            </ol>
-            <p>The Fusion and MOOD events are free to the public and the Currents New Media event charges for tickets separately. Come hang with us and check out all the films!</p>
+            <p>We will assign your film to at least one of the <a href="/installations">installations</a> in the 2025 iteration of the Festival at <a href="https://paseoproject.org/paseo2025" target="_blank">PASEO 2025</a> in Taos.</p>
           </div>
       </div>
     </div>
@@ -239,7 +232,6 @@ eleventyNavigation:
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
             <p>For the <a href="/rules/#portrait">Portrait Films</a> and the <a href="/rules/#other">16:9 films</a> categories, we will use directional speakers to prevent cacophony.</p>
-            <p><a href="/rules/#other">4:3 films</a> must be silent, so no issue there.</p>
           </div>
       </div>
     </div>
