--- a/src/index.njk
+++ b/src/index.njk
@@ -10,14 +10,14 @@ filmsfront:
  - they-came-from-planet-x-3rd
 ---
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx Submit xxxxxxxxxxxxxxxxxxxxxxxxxx -->
- {# <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: -webkit-xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button> #}
+ <button style="margin: 0 auto; display: block; margin-top: 40px; font-size: -webkit-xxx-large;" onclick=" window.open('https://filmfreeway.com/Fronterasmicrofilmfestival','_blank')">Submit</button>
 
 <!-- Countdown -->
-{# <p style="text-align: center; max-width: none; font-weight: bold;">Deadline: <u>May 2, 11:59 PM MT</u>.</p>
-<p style="text-align: center; max-width: none; font-weight: bold;">Time left: <span class="blink-me" id="demo"></span></p> #}
-{# <script>
+<p style="text-align: center; max-width: none; font-weight: bold;">Deadline: <u>August 4, 11:59 PM MT</u>.</p>
+<p style="text-align: center; max-width: none; font-weight: bold;">Time left: <span class="blink-me" id="demo"></span></p>
+<script>
 // Set the date we're counting down to
-var countDownDate = new Date("05/02/2023 23:59:59").getTime();
+var countDownDate = new Date("08/04/2025 23:59:59").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -44,7 +44,7 @@ var x = setInterval(function() {
     document.getElementById("demo").innerHTML = "EXPIRED";
   }
 }, 1000);
-</script> #}
+</script>
 
 <!-- xxxxxxxxxxxxxxxxxxxxxxxxxx More Info xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 <div class="fullcontainer">
